2002-02-26  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-sum.el (gnus-articles-to-read): `gnus-large-newsgroup' is
	used as the default answer of the question, "How many articles?".
	From TSUCHIYA Masatoshi <tsuchiya@namazu.org>

	* nnagent.el (nnagent-retrieve-headers): Remove articles with
	small numbers.

2002-02-24  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* deuglify.el: Fix comments.

2002-02-23  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* html2text.el (html2text-clean-anchor): If there is no HREF,
	insert nothing.
	
	* mml.el (mml-generate-mime-1): Add cdr.
	From: andre@slamdunknetworks.com

	* mm-view.el (mm-text-html-renderer-alist): Add html2text.
	(mm-text-html-washer-alist): Ditto.

	* mm-decode.el (mm-text-html-renderer): Add html2text.

	* html2text.el: Face lift.

	* html2text.el: New file from Joakim Hove <hove@phys.ntnu.no>.

2002-02-22  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-sum.el: Add gnus-article-outlook-deuglify-article.

	* deuglify.el: Change copy right. Add autoload. Add coding-system.
	
	* deuglify.el: New file. The original file name is
	gnus-outlook-deuglify.el from Raymond Scholz <rscholz@zonix.de>.

	* mm-decode.el (mm-display-external): Use
	mm-file-name-rewrite-functions.  From <andre@slamdunknetworks.com>

2002-02-22  Paul Jarc  <prj@po.cwru.edu>

	* nnmaildir.el (nnmaildir-request-list): Report the highest
	article number, not the total number of articles.

2002-02-21  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-sum.el: Move uu key map here.
	(gnus-summary-make-menu-bar): Add gnus-summary-save-parts.

2002-02-21  Paul Jarc  <prj@po.cwru.edu>

	* nnmaildir.el (nnmaildir-request-expire-articles): Use
	nnmail-expiry-wait* if expire-age parameter is not set.

2002-02-21  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-group.el (gnus-group-sort-groups-by-real-name): New
	function.
	(gnus-group-sort-selected-groups-by-real-name): New function.
	(gnus-group-make-menu-bar): Add sort by real name.
